[tool.poetry]
name = "mfa-bombing"
version = "0.1.0"
description = ""
authors = ["Avi <avi.aminov@authomize.com>"]

[tool.poetry.dependencies]
python = "^3.8"
okta = "^2.9.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
